--- a/app/src/main/res/layout/fragment_gift.xml
+++ b/app/src/main/res/layout/fragment_gift.xml
@@ -7,23 +7,16 @@
 
     <ImageView
         android:id="@+id/btn_close"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:layout_marginRight="28dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="73dp"
         android:background="@drawable/icon_close_normal" />
-
-
-
     <com.wisape.android.view.GalleryView
         android:id="@+id/gift_gallery"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginBottom="32dp"
-        android:layout_marginTop="@dimen/span_space" />
-
-
-
-
+        android:layout_marginTop="32dp"/>
 </LinearLayout>
