--- a/app/src/main/assets/www/views/test.html
+++ b/app/src/main/assets/www/views/test.html
@@ -37,29 +37,6 @@
     </div>
     <div class="pages" id="pages-scroll" >
         <ul>
-            <!--<li class="active">-->
-            <!--<div class="stage-content edit-area pages-img pages-img-bg"-->
-            <!--style="background-image: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;">-->
-            <!--<div class="symbol" style="background:red;">-->
-            <!--<div class="pages-img edit-area"><img data-name="img1" style=""-->
-            <!--src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/-->
-            <!--width="50" height="50">-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--<div class="symbol" style="background: green;">-->
-            <!--<div class="pages-img edit-area"><img data-name="img1" style=""-->
-            <!--src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/-->
-            <!--width="50" height="50">-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--<div class="symbol" style="z-index: 3;">-->
-            <!--<div class="pages-txt edit-area"-->
-            <!--style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the-->
-            <!--classictranslation corpus, the combination of network technology and language essence-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--</li>-->
         </ul>
     </div>
     <span class="icon-add-stage" id="AddNewStage"></span>
@@ -78,9 +55,6 @@
         </div>
     </div>
     <div class="pages editable">
-        <!--<div class="tpl-item" style="background: url(../public/img/temp/stage_example.jpg);background-size: 100% 100%;">-->
-        <!--<div id="test" class="pages-txt selected" contenteditable="true" style="margin:70px auto;width:150px;color:#fff;text-align: left;background:rgba(0,0,0,0.5);">As c update of the classic translation corpus, the combination of network technology and language essence</div>-->
-        <!--</div>-->
     </div>
 
 
@@ -110,13 +84,6 @@
             <span class="tit">Font Selection</span>
         </div>
         <div class="bd opts">
-            <!--<div class="item"><span class="opt-name">Font1</span><span class="opt-right"><i class="icon-correct"></i></span></div>-->
-            <!--<div class="item"><span class="opt-name">Font2</span><span class="opt-right"><i class="icon-download"></i></span></div>-->
-            <!--<div class="item"><span class="opt-name">Font2</span><span class="opt-right"><div class="download-progress-bar"><div class="download-progress-percent" style="width:50%;"></div></div></span></div>-->
-            <!--<div class="item"><span class="opt-name">Font2</span><span class="opt-right"><i class="icon-download"></i></span></div>-->
-            <!--<div class="item"><span class="opt-name">Font2</span><span class="opt-right"><i class="icon-download"></i></span></div>-->
-            <!--<div class="item"><span class="opt-name">Font2</span><span class="opt-right"><i class="icon-download"></i></span></div>-->
-            <!--<div class="item"><span class="opt-name">Font2</span><span class="opt-right"><i class="icon-download"></i></span></div>-->
         </div>
     </div>
 
@@ -270,7 +237,6 @@
 <script src="../public/js/app-main.js"></script>
 <script src="../public/js/common.js"></script>
 <script src="../public/js/Sortable.js"></script>
-<!--<script src="../public/js/html2canvas.min.js"></script>-->
 <script type="text/javascript">
     function test(args){
         /**
@@ -357,6 +323,10 @@
         console.dir(JSON.stringify(path));
         target.find(".download-progress-bar").hide();
         target.attr({"data-path":path.path});
+        target.addClass("tpl-exist");
+        setTimeout(function(){
+            target.click();
+        },300)
         firstTplDown = true;
     }
     function onError(){
@@ -408,17 +378,6 @@
             console.info(type + " done!!!");
         })
     }
-
-
-    function openURL(){
-        console.info("href");
-        cordova.exec(function() {
-        }, function(e) {
-        }, "StoryTemplate", "openLink", ["http://www.baidu.com"]);
-    }
-
-
-
 </script>
 <script>
     $(function(){
