--- a/app/src/main/res/layout/activity_story_settings.xml
+++ b/app/src/main/res/layout/activity_story_settings.xml
@@ -9,78 +9,78 @@
     android:paddingEnd="24dp"
     android:orientation="vertical">
 
-    <android.support.v7.widget.AppCompatTextView
-        style="@style/App.TextStyle.Secondary"
-        android:id="@+id/story_settings_primary_title"
-        android:layout_width="match_parent"
-        android:layout_height="58dp"
-        android:gravity="left|start|center_vertical"
-        android:text="@string/story_settings_primary_title" />
-    <View style="@style/View.Divider"/>
+    <!--<android.support.v7.widget.AppCompatTextView-->
+        <!--style="@style/App.TextStyle.Secondary"-->
+        <!--android:id="@+id/story_settings_primary_title"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="58dp"-->
+        <!--android:gravity="left|start|center_vertical"-->
+        <!--android:text="@string/story_settings_primary_title" />-->
+    <!--<View style="@style/View.Divider"/>-->
 
-    <android.support.v7.widget.AppCompatEditText
-        style="@style/App.TextStyle.Primary"
-        android:id="@+id/story_settings_name"
-        android:layout_width="match_parent"
-        android:layout_height="78dp"
-        android:gravity="left|start|center_vertical"
-        android:hint="@string/story_settings_name_hint"
-        android:background="@null"/>
-    <View style="@style/View.Divider"/>
+    <!--<android.support.v7.widget.AppCompatEditText-->
+        <!--style="@style/App.TextStyle.Primary"-->
+        <!--android:id="@+id/story_settings_name"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="78dp"-->
+        <!--android:gravity="left|start|center_vertical"-->
+        <!--android:hint="@string/story_settings_name_hint"-->
+        <!--android:background="@null"/>-->
+    <!--<View style="@style/View.Divider"/>-->
 
-    <android.support.v7.widget.AppCompatEditText
-        style="@style/App.TextStyle.Primary"
-        android:id="@+id/story_settings_desc"
-        android:layout_width="match_parent"
-        android:layout_height="78dp"
-        android:gravity="left|start|center_vertical"
-        android:hint="@string/story_settings_desc_hint"
-        android:singleLine="false"
-        android:lines="2"
-        android:maxLines="2"
-        android:minLines="2"
-        android:background="@null"/>
-    <View style="@style/View.Divider"/>
+    <!--<android.support.v7.widget.AppCompatEditText-->
+        <!--style="@style/App.TextStyle.Primary"-->
+        <!--android:id="@+id/story_settings_desc"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="78dp"-->
+        <!--android:gravity="left|start|center_vertical"-->
+        <!--android:hint="@string/story_settings_desc_hint"-->
+        <!--android:singleLine="false"-->
+        <!--android:lines="2"-->
+        <!--android:maxLines="2"-->
+        <!--android:minLines="2"-->
+        <!--android:background="@null"/>-->
+    <!--<View style="@style/View.Divider"/>-->
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal">-->
 
-        <android.support.v7.widget.AppCompatTextView
-            style="@style/App.TextStyle.Primary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left|start|center_vertical"
-            android:gravity="left|start|center_vertical"
-            android:layout_weight="1"
-            android:text="@string/story_settings_cover"
-            />
+        <!--<android.support.v7.widget.AppCompatTextView-->
+            <!--style="@style/App.TextStyle.Primary"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="left|start|center_vertical"-->
+            <!--android:gravity="left|start|center_vertical"-->
+            <!--android:layout_weight="1"-->
+            <!--android:text="@string/story_settings_cover"-->
+            <!--/>-->
 
-        <ImageView
-            android:id="@+id/story_settings_cover_sdv"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@mipmap/icon_menu_default_head"
-            />
+        <!--<ImageView-->
+            <!--android:id="@+id/story_settings_cover_sdv"-->
+            <!--android:layout_width="80dp"-->
+            <!--android:layout_height="80dp"-->
+            <!--android:src="@mipmap/icon_menu_default_head"-->
+            <!--/>-->
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="center"
-            android:layout_marginLeft="18dp"
-            android:layout_marginStart="18dp"
-            android:layout_gravity="right|end|center_vertical"
-            android:src="@drawable/icon_down"/>
-    </LinearLayout>
+        <!--<ImageView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:scaleType="center"-->
+            <!--android:layout_marginLeft="18dp"-->
+            <!--android:layout_marginStart="18dp"-->
+            <!--android:layout_gravity="right|end|center_vertical"-->
+            <!--android:src="@drawable/icon_down"/>-->
+    <!--</LinearLayout>-->
 
-    <android.support.v7.widget.AppCompatTextView
-        style="@style/App.TextStyle.Secondary"
-        android:layout_width="match_parent"
-        android:layout_height="58dp"
-        android:gravity="left|start|center_vertical"
-        android:text="@string/story_settings_other_title"/>
-    <View style="@style/View.Divider"/>
+    <!--<android.support.v7.widget.AppCompatTextView-->
+        <!--style="@style/App.TextStyle.Secondary"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="58dp"-->
+        <!--android:gravity="left|start|center_vertical"-->
+        <!--android:text="@string/story_settings_other_title"/>-->
+    <!--<View style="@style/View.Divider"/>-->
     
     <LinearLayout
         android:id="@+id/story_settings_music_layout"
