--- a/app/src/main/assets/www/public/css/editor_index.css
+++ b/app/src/main/assets/www/public/css/editor_index.css
@@ -116,6 +116,9 @@ a {text-decoration: none;color:inherit;}
 .icon-settings{
     background-image: url(../img/icon-settings.png);
 }
+.icon-music{
+    background-image: url(../img/icon-music.png);
+}
 .icon-tags-hot{
     background-image: url(../img/icon-tags-hot.png);
 }
@@ -231,6 +234,7 @@ a {text-decoration: none;color:inherit;}
 .header .icon-layout,
 .header .icon-list,
 .header .icon-settings,
+.header .icon-music,
 .header .icon-pencil,
 .header .icon-dustbin,
 .header .imgIco-edit-image{
@@ -246,7 +250,6 @@ a {text-decoration: none;color:inherit;}
 
 .tpl-page-cat {background:#f5f5f5;}
 .tpl-page-cat .hd {
-    font-size:14px;
     width:100%;
     text-align: center;
     border-bottom:1px solid #e0e1e2;
@@ -254,13 +257,11 @@ a {text-decoration: none;color:inherit;}
     overflow: hidden;
     margin-top:2.37rem;
 }
-.tpl-page-cat .hd ul {
-}
 .tpl-page-cat .hd li {
     display:block;
     float:left;
-    height:2.07rem;
-    line-height: 2.07rem;
+    height:2.13rem;
+    line-height: 2.13rem;
     color:#2d3437;
     margin:0 0.2rem 0 0;
     padding:0 0.5rem;
@@ -271,24 +272,23 @@ a {text-decoration: none;color:inherit;}
     color:#52b502;
     border-bottom:2px solid #52b502;
 }
-.tpl-page-cat .bd {padding:0.71rem 0.59rem 0.71rem 0;height:6.45rem;width:100%;position:relative;overflow: hidden; }
-.tpl-page-cat .bd ul {position: absolute; z-index: 1;}
-.tpl-page-item {width:3.1rem;height:5.03rem;float:left;position: relative;margin-left:0.59rem;overflow: hidden;box-sizing: border-box;}
+.tpl-page-cat .bd {padding:0.35rem 0rem 0.35rem 0;height:4.99rem;width:100%;position:relative;overflow: hidden; }
+.tpl-page-item {width:2.81rem;height:4.29rem;display:inline-block;position: relative;margin-left:0.62rem;overflow: hidden;}
 .tpl-page-item .icon-tags-hot,.tpl-page-item .icon-tags-new {display:none;width:18px;height:28px;position: absolute;left:0;top:0;}
 .tpl-page-item .stage-thumb {width:100%;height:100%;}
 .tpl-page-item-name {font-size:0.6rem;height:1rem;line-height:1rem;overflow:hidden;color:#fff;font-weight:bold;background-color:rgba(0,0,0,0.4);padding:0.07rem 0;text-align: center;position: absolute;bottom:0;width:2.96rem;left:0;}
-.tpl-page-item .icon-download {display:block;width:0.9rem;height:0.9rem;position: absolute;bottom:1.1rem;right:0.2rem;}
-.tpl-page-item .download-progress-bar { position: absolute; left: 0.15rem; bottom: 1.2rem;width:2.66rem;}
+.tpl-page-item .icon-download {display:block;width:1rem;height:1rem;position: absolute;bottom:.2rem;right:0.2rem;}
+.tpl-page-item .download-progress-bar { position: absolute; left: 0.1rem; bottom: .2rem;width:2.41rem;}
 .tpl-page-item.active {border:0.1rem solid #52b502;}
 
-.pages {width:100%;margin:0.8rem 0;position:relative;overflow: hidden;}
-.pages li {width:9.78rem;height:13.4rem;float:left;position: relative;margin-left:1.2rem;opacity: 0.5;-webkit-transform:translate3d(0,0,0);}
+.pages {width:100%;margin:0.444rem 0;position:relative;overflow: hidden;}
+.pages li {width:9.71rem;height:15.24rem;float:left;position: relative;margin-left:1.06rem;opacity: 0.5;-webkit-transform:translate3d(0,0,0);}
 .pages li.active  {opacity: 1}
 .pages li .count {z-index:999;position: absolute;left:0;bottom:0;background:rgba(82,181,2,0.5);color:#fff;font-size:14px;padding:2px 6px;}
 .pages-item .pages-item-thumb {width:100%;}
 .pages .stage-content {border-radius: 0.2rem;}
-.pages-big {margin-top:2.37rem;}
-.pages-big li {width:11.31rem;height:16.14rem;}
+.pages-big {margin-top:3.37rem;}
+.pages-big li {width:11.34rem;height:18.11rem;margin-left:1.33rem;}
 
 .story-page-list {width:100%;overflow: hidden}
 .story-page-list .icon-correct {
@@ -302,11 +302,11 @@ a {text-decoration: none;color:inherit;}
     z-index: 999;
 }
 .story-page-list .selected  .icon-correct {display: block}
-.story-page-list {padding-left:0.2rem;margin-top:2.37rem;}
+.story-page-list {padding:0 0.41rem;margin-top:2.37rem;}
 .story-page-list .tpl-page-item {
-    width:4.7rem;
-    height: 6.43rem;
-    margin:0rem 0 0.44rem 0.41rem;
+    width:4.62rem;
+    height: 7.24rem;
+    margin:0.22rem;
     display: inline-block;
     border-radius: 0.2rem;
     overflow: hidden;
@@ -331,7 +331,7 @@ a {text-decoration: none;color:inherit;}
 .pop-editer-opt .opt-animation-val i {margin-top: 0.3rem;float:left;display: inline-block;width:0.88rem;height:0.88rem;background-size: 100% 100%;border-radius: 0.88rem;border:1px solid #52b502;}
 .pop-editer-opt .opt-font-val {margin-top: 0.5rem;float:left;font-size:0.622rem;}
 .pop-editer-text {background: #f2f2f2;padding:0.44rem 0.59rem;}
-.pop-editer-text .textarea-word {position:relative;height:1.48rem;width:12.6rem;color:#2d3437;font-size:1rem;resize: none;overflow-y:visible;border-radius: 0.15rem;border:1px solid #d6d7d8;background: #fff;-webkit-appearance:none;outline:none;max-height: 4rem;line-height: 1.25rem}
+.pop-editer-text .textarea-word {position:relative;height:1.18rem;width:12.6rem;color:#2d3437;font-size:0.71rem;resize: none;overflow-y:visible;border-radius: 0.15rem;border:1px solid #d6d7d8;background: #fff;-webkit-appearance:none;outline:none;max-height: 3rem;line-height: 0.9rem}
 .btn-text-done {color:#2d3437;font-size:0.71rem;}
 .btn-text-del {position: absolute;left:0;top:0;}
 
@@ -452,14 +452,47 @@ a {text-decoration: none;color:inherit;}
 }
 
 .stage-content .edit-area {display:inline-block;position: relative;}
+.active .stage-content .edit-area-active {
+    animation: activeAnimation 2s;
+    -moz-animation: activeAnimation 2s;
+    -webkit-animation: activeAnimation 2s;
+    -o-animation: activeAnimation 2s;
+}
+.active .stage-content .active {
+    background-color:#faf1de;outline:1px dotted #f9a825;
+}
 .edit-area .ico-acitve {display: none;background-image: url(../img/icon-edit-pic.png);width:36px;height:36px;position: absolute;;top:10px;right:10px;background-size: 100% 100%;}
-.pages-txt.edit-area {border:1px solid transparent;border-radius:5px;}
-.pages-txt.edit-area.active {border-color:#ffe400;}
+.pages-txt.edit-area.active {outline:1px dotted #ffe400;}
 .edit-area.active>.ico-acitve {display: block;}
 
 .drag-handle {display:none;position: absolute; top: 0px; right: 0px; bottom:0;left:0;background: #000; width:100%;height:100%;opacity: 0;z-index: 10000;}
 li.selected .drag-handle {display: block;}
 .story-page-list .count {display: none}
+
+
+@keyframes activeAnimation
+{
+    from {background-color:#faf1de;outline:1px dotted #f9a825;}
+    to {background-color:transparent;outline:1px dotted transparent;}
+}
+
+@-moz-keyframes activeAnimation /* Firefox */
+{
+    from {background-color:#faf1de;outline:1px dotted #f9a825;}
+    to {background-color:transparent;outline:1px dotted transparent;}
+}
+
+@-webkit-keyframes activeAnimation /* Safari 和 Chrome */
+{
+    from {background-color:#faf1de;outline:1px dotted #f9a825;}
+    to {background-color:transparent;outline:1px dotted transparent;}
+}
+
+@-o-keyframes activeAnimation /* Opera */
+{
+    from {background-color:#faf1de;outline:1px dotted #f9a825;}
+    to {background-color:transparent;outline:1px dotted transparent;}
+}
 
 
 
