--- a/app/src/main/assets/www/views/mobile2.html
+++ b/app/src/main/assets/www/views/mobile2.html
@@ -29,56 +29,127 @@
     <!--上下滚动 start-->
     <section class="m-page hide" >
         <div class="m-img" >
-            <div class="stage-content edit-area pages-img pages-img-bg" style=" text-align:center;word-break:break-all;display: box;display: -webkit-box;display: -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background: url(img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
-                <div class="stage-content edit-area pages-img pages-img-bg" style=" text-align:center;word-break:break-all;display: box;display: -webkit-box;display: -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background: url(img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
-                    <div class="stage-content-box" style="-webkit-transform-origin:0 0;">
-
-                        <div style="width:12.14rem;margin:3.5rem 1.929rem;padding:5.18rem 0 1.18rem 0;background-color: rgba(255,255,255,0.5);border-radius: 0.5rem;position:relative;">
-                            <div class="symbol" style="z-index: 999; display: inline-block;top: -2rem; position: absolute; margin-left: -3rem;">
-                                <div class="pages-img edit-area">
-                                    <img data-name="img1" style="width:5.4rem;height:5.4rem;border-radius: 2.7rem;border:0.3rem solid #fff;" src="img/t.jpg"></div>
-                            </div>
-                            <div class="symbol" style="z-index: 3;">
-                                <div class="pages-txt edit-area" style="font-size:0.78rem;color:#000;font-weight: bold">
-                                    JackeyWisape
+            <div class="stage-content edit-area pages-img pages-img-bg"
+                 style=" text-align:center;word-break:break-all;background: url(img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
+                <div class="stage-content-box" style="text-align: center;width:16rem;-webkit-transform-origin:0 0;">
+                    <div class="symbol"  style="padding-top:2.96rem;">
+                        <div class="pages-txt edit-area" style="display: inline-block;font-family: 'bebas';font-size:4.41rem;line-height: 4.41rem;color:#cc0001;">
+                            JOBS
+                        </div>
+                    </div>
+                    <div class="symbol" style="z-index: 3;">
+                        <div class="pages-txt edit-area" style="display: inline-block;margin-top:0.8rem;font-family: 'Lato';font-size:0.8rem;line-height:0.8rem;color:#444;">
+                            FOR WISAPE
+                        </div>
+                    </div>
+                    <div class="stage-content-box" style="padding-top:1.62rem;text-align: left;">
+                        <div style="margin:0 2rem;overflow: hidden">
+                            <div style="display: inline-block;width: 50%;float:left;">
+                                <div class="symbol" >
+                                    <div class="pages-txt edit-area" style="font-weight:bold;text-align:left;font-family: 'Lato';font-size:0.71rem;line-height: 0.71rem;color:#444;">
+                                        Global Partner
+                                    </div>
+                                </div>
+                                <div class="symbol" >
+                                    <div class="pages-txt edit-area" style="font-weight:bold;text-align:left;font-family: 'Lato';font-size:0.62rem;line-height: 0.62rem;color:#444;">
+                                        Indonesia
+                                    </div>
                                 </div>
                             </div>
-                            <div class="symbol" style="z-index: 3;">
-                                <div class="pages-txt edit-area" style="font-size:0.533rem;color:#000;">
-                                    Co-founder
+                            <div style="display: inline-block;width: 50%;float:left;">
+                                <div class="symbol" >
+                                    <div class="pages-txt edit-area" style="font-weight:bold;text-align:left;font-family: 'Lato';font-size:0.71rem;line-height: 0.71rem;color:#444;">
+                                        Global Partner
+                                    </div>
+                                </div>
+                                <div class="symbol" >
+                                    <div class="pages-txt edit-area" style="font-weight:bold;text-align:left;font-family: 'Lato';font-size:0.62rem;line-height: 0.62rem;color:#444;">
+                                        Indonesia
+                                    </div>
                                 </div>
                             </div>
-                            <div class="symbol" style="z-index: 3;">
-                                <div class="pages-txt edit-area" style="margin-top:1rem;font-size:0.444rem;line-height:0.888rem;color:#448aff;text-decoration:underline;">
-                                    Email: support@wisape.com<br>
-                                    Tel:(702) 825-1558<br>
-                                    Tel:(702) 825-1558<br>
-                                    Site:www.wisape.com<br>
-                                    Adress:Room 8001 California, Mountain View,<br>
-                                    Amphitheatre Pkwy
+                        </div>
+                        <div style="margin:1rem 2rem;overflow: hidden">
+                            <div style="display: inline-block;width: 50%;float:left;">
+                                <div class="symbol" >
+                                    <div class="pages-txt edit-area" style="text-align:left;font-family: 'Lato';font-size:0.71rem;line-height: 0.71rem;color:#444;">
+                                        Global Partner
+                                    </div>
+                                </div>
+                                <div class="symbol" >
+                                    <div class="pages-txt edit-area" style="text-align:left;font-family: 'Lato';font-size:0.62rem;line-height: 0.62rem;color:#444;">
+                                        Indonesia
+                                    </div>
+                                </div>
+                            </div>
+                            <div style="display: inline-block;width: 50%;float:left;">
+                                <div class="symbol" >
+                                    <div class="pages-txt edit-area" style="text-align:left;font-family: 'Lato';font-size:0.71rem;line-height: 0.71rem;color:#444;">
+                                        Global Partner
+                                    </div>
+                                </div>
+                                <div class="symbol" >
+                                    <div class="pages-txt edit-area" style="text-align:left;font-family: 'Lato';font-size:0.62rem;line-height: 0.62rem;color:#444;">
+                                        Indonesia
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-
             </div>
 
         </div>
     </section>
     <section class="m-page hide" >
         <div class="m-img" >
-            <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;" data-animation="animated slideInDown">>As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
+            <div class="stage-content edit-area pages-img pages-img-bg"
+                 style=" text-align:center;word-break:break-all;background: url(img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
+                <div class="stage-content-box" style="position: absolute;text-align: center;top:3.65rem;width:16rem;-webkit-transform-origin:0 0;">
+                    <div class="symbol" >
+                        <div class="pages-txt edit-area" style="display: inline-block;font-family: 'bebas';font-size:3.5rem;line-height: 3.5rem;color:#cc0001;">
+                            JOITN
+                        </div>
+                    </div>
+                    <div class="symbol" style="z-index: 3;">
+                        <div class="pages-txt edit-area" style="display: inline-block;margin-top:0.5rem;font-family: 'bebas';font-size:3.5rem;line-height: 3.5rem;color:#000;">
+                            WISAPE
+                        </div>
+                    </div>
+                </div>
+                <div class="stage-content-box" style="position: absolute;bottom:0.5rem;text-align: center;width:16rem;-webkit-transform-origin:0 0;">
+                    <div class="symbol" style="z-index: 999; ">
+                        <div class="pages-img edit-area">
+                            <img data-name="img1" style="width:4.44rem;height:1.03rem;" src="img/logo.png"></div>
+                    </div>
+                    <div class="symbol" style="z-index: 3;">
+                        <div class="pages-txt edit-area" style="font-size:0.53rem;color:#000;font-family: 'Lato';margin-top:0.3rem;">
+                            Something Wonderful is Coming
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section class="m-page hide" >
         <div class="m-img" >
-            <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;" data-animation="animated slideInDown">>As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
-        </div>
-    </section>
-    <section class="m-page hide" >
-        <div class="m-img" >
-            <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;" data-animation="animated slideInDown">>As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
+            <div class="stage-content edit-area pages-img pages-img-bg" style=" text-align:center;word-break:break-all;display: box;display: -webkit-box;display: -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background: url(img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
+                <div class="stage-content-box" style="-webkit-transform-origin:0 0;">
+                    <div style="width:12.14rem;margin:3.5rem 1.929rem;">
+                        <div class="symbol" style="z-index: 3;">
+                            <div class="pages-txt edit-area" style="font-size:1.64rem;line-height:1.64rem;color:#000;font-weight: bold;font-family: 'bebas';">
+                                what  is wisape
+                            </div>
+                        </div>
+                        <div class="symbol" style="z-index: 3;">
+                            <div class="pages-txt edit-area" style="font-size:0.444rem;color:#000;font-family: 'Lato';margin-top:1.1rem;line-height: 0.8rem;">
+                                Wisape is an all-in-one mobile marketing platform. It now enables you to build stunning business stories with various of category templates（eg：Display goods, Create poster, broadcast brand, interaction, etc）. Variety of social network channels are supported, so you can promote your business through them. monitor the overall sales trends and manage the whole marketing process. Wisape can help you get more target customer and improve ROI(Return on investment), take your business to the next level. by the way, of course no technical skills required and FREE！
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
     <section class="m-page hide" >
