--- a/app/src/main/assets/www/views/test.html
+++ b/app/src/main/assets/www/views/test.html
@@ -1,5 +1,5 @@
 <html>
-<head  >
+<head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
     <meta name="format-detection"content="telephone=no, email=no" />
@@ -22,7 +22,7 @@
                 <li><a class="icon-play" id="storyPreview"></a></li>
                 <li><a class="icon-layout" id="toggleCat" ></a></li>
                 <li><a class="icon-list" id="manageStageList"></a></li>
-                <li><a class="icon-settings" onclick="setting(1);"></a></li>
+                <li><a class="icon-music" onclick="setting(1);"></a></li>
             </ul>
         </div>
     </div>
@@ -234,6 +234,17 @@
     </div>
     <div class="clearfix"></div>
 </div>
+<div class="ui-dialog save-dialog" style="width: 300px; height: 190px; display: none; left: 50%; margin-left: -150px; top: 50%; margin-top: -95px;">
+    <div class="ui-dialog-title">Save Stroy</div>
+    <div class="ui-dialog-content">
+        Comfirm to save stroy ？
+    </div>
+    <div class="ui-dialog-btns">
+        <a class="ui-btn btn-cancle">Cancle</a>
+        <a class="ui-btn btn-submit">Confirm</a>
+    </div>
+    <div class="clearfix"></div>
+</div>
 <div class="ui-dialog del-tip-dialog" style="width: 300px; height: 200px; display: none; left: 50%; margin-left: -150px; top: 50%; margin-top: -100px;">
     <div class="ui-dialog-title">Delete Page</div>
     <div class="ui-dialog-content">
@@ -306,6 +317,7 @@
      *下载模板
      */
     function start(id,categoryId){
+        WisapeEditer.logger("onTplDownloadStart:","categoryId:" + id + " categoryId:" + categoryId);
         cordova.exec(function(retval) {
             showMessage("start?:" +retval);
         }, function(e) {
@@ -320,16 +332,15 @@
         }, "StoryTemplate", "read", [tempName]);
     }
     function setting(id){
+        WisapeEditer.logger("音乐设置:",id);
         cordova.exec(function(retval) {
-
-            showMessage("start?:" +retval);
         }, function(e) {
-            alert("Error: "+e);
+            console.info("Error: "+e);
         }, "StoryTemplate", "setting", [id]);
     }
     function onDownloading(progress){
-        var message = "onDownloading:" + progress;
         var target = $("[data-id=" + progress.id + "]");
+        WisapeEditer.logger("onTplDownloading:",progress.id);
         console.info("onDownloading:");
         console.dir(JSON.stringify(progress));
         console.info(progress.progress);
@@ -341,6 +352,7 @@
     var firstTplDown = false;
     function onCompleted(path){
         var target = $("[data-id=" + path.id + "]");
+        WisapeEditer.logger("onTplCompleted:",path.id);
         console.dir(JSON.stringify(path));
         target.find(".download-progress-bar").hide();
         target.attr({"data-path":path.path});
@@ -360,6 +372,7 @@
 
     function onFontDownloading(data) {
         console.info("onFontDownloading:");
+        WisapeEditer.logger("onFontDownloading:",data.fontName);
         console.dir(JSON.stringify(data));
         console.info(data.progress);
         var target = $("[data-fontname=" + data.fontName + "]");
@@ -371,6 +384,7 @@
 
     function onFontCompleted(data) {
         console.info("onFontCompleted:");
+        WisapeEditer.logger("onFontCompleted:",data.fontName);
         console.dir(JSON.stringify(data));
         var target = $("[data-fontname=" + data.fontName + "]");
         target.find(".download-progress-bar").hide();
@@ -379,25 +393,7 @@
 
 
     function doSaveStory(){
-        var pageScroll = $("#pages-scroll");
-        var retHtml = '<div class="p-index main" id="con">', retImg = [],type="";
-        for (var i = 0; i < WisapeEditer.storyData.length; i++) {
-            retHtml += '<section class="m-page hide pages-item" > <div class="m-img" >' + WisapeEditer.storyData[i].replace("file://","") + '</div> </section>';
-        }
-        pageScroll.find(".pages-img").each(function () {
-            var me = $(this);
-            if (me.hasClass("pages-img-bg")) {
-                retImg.push((me.css("background-image").split("url(")[1].split(")")[0]+"").replace("file://",""));
-            } else {
-                retImg.push(me.find("img").attr("src").replace("file://",""));
-            }
-        });
-
-        console.info("物理保存");
-        WisapeEditer.logger("物理保存","");
-        WisapeEditer.GetNativeData("save", [retImg[0],retHtml, retImg], function () {
-            console.info(type + " done!!!");
-        })
+        WisapeEditer.SaveStory();
     }
 </script>
 <script>
