--- a/app/src/main/res/layout/fragment_gift.xml
+++ b/app/src/main/res/layout/fragment_gift.xml
@@ -2,22 +2,41 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/gallery_item_shadow_bg"
-    android:alpha="0.6">
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/btn_close"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginRight="28dp"
-        android:layout_marginTop="73dp"
-        android:background="@drawable/icon_close_normal" />
-    <com.wisape.android.view.GalleryView
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:alpha="0.85"
+        android:background="@drawable/gallery_item_shadow_bg">
+
+        <ImageView
+            android:id="@+id/btn_close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="24dp"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/icon_close_normal" />
+    </RelativeLayout>
+
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/gift_gallery"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="32dp"
-        android:layout_marginTop="32dp"/>
+        android:layout_height="0dp"
+        android:layout_weight="1.5"
+        android:background="@color/app_sixth_transparent_50p"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:alpha="0.85"
+        android:background="@drawable/gallery_item_shadow_bg">
+
+    </LinearLayout>
 </LinearLayout>
