--- a/app/src/main/res/layout/item_gift.xml
+++ b/app/src/main/res/layout/item_gift.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-   android:id="@+id/linear_gif"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:id="@+id/linear_gif"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/img_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
+        android:scaleType="fitXY" />
 
 </LinearLayout>
