--- a/app/src/main/res/layout/layout_photo_camera.xml
+++ b/app/src/main/res/layout/layout_photo_camera.xml
@@ -2,7 +2,8 @@
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/photo_thumb"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:src="@mipmap/icon_camera"
+    android:layout_margin="2dp"
    />
