--- a/app/src/main/res/layout/layout_photo_item.xml
+++ b/app/src/main/res/layout/layout_photo_item.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="100dp"
-    android:layout_height="100dp">
+    android:layout_height="95dp"
+    android:padding="2dp">
 
     <ImageView
         android:id="@+id/photo_thumb"
