--- a/app/src/main/assets/www/public/css/editor_index.css
+++ b/app/src/main/assets/www/public/css/editor_index.css
@@ -254,8 +254,8 @@ a {text-decoration: none;color:inherit;}
     text-align: center;
     border-bottom:1px solid #e0e1e2;
     position:relative;
-    overflow: hidden;
     margin-top:2.37rem;
+    height: 2.17rem;
 }
 .tpl-page-cat .hd li {
     display:block;
@@ -263,7 +263,7 @@ a {text-decoration: none;color:inherit;}
     height:2.13rem;
     line-height: 2.13rem;
     color:#2d3437;
-    margin:0 0.2rem 0 0;
+    /*margin:0 0.2rem 0 0;*/
     padding:0 0.5rem;
     font-size:0.71rem;
     border-bottom:2px solid #f5f5f5;
@@ -272,14 +272,14 @@ a {text-decoration: none;color:inherit;}
     color:#52b502;
     border-bottom:2px solid #52b502;
 }
-.tpl-page-cat .bd {padding:0.35rem 0rem 0.35rem 0;height:4.99rem;width:100%;position:relative;overflow: hidden; }
-.tpl-page-item {width:2.81rem;height:4.29rem;display:inline-block;position: relative;margin-left:0.62rem;overflow: hidden;}
+.tpl-page-cat .bd {padding:0.35rem 0rem 0.35rem 0.62rem;height:4.29rem;width:15.38rem;position:relative;box-sizing: content-box;}
+.tpl-page-item {width:2.81rem;height:4.29rem;display:inline-block;position: relative;margin-right:0.62rem;overflow: hidden;}
 .tpl-page-item .icon-tags-hot,.tpl-page-item .icon-tags-new {display:none;width:18px;height:28px;position: absolute;left:0;top:0;}
 .tpl-page-item .stage-thumb {width:100%;height:100%;}
 .tpl-page-item-name {font-size:0.6rem;height:1rem;line-height:1rem;overflow:hidden;color:#fff;font-weight:bold;background-color:rgba(0,0,0,0.4);padding:0.07rem 0;text-align: center;position: absolute;bottom:0;width:2.96rem;left:0;}
 .tpl-page-item .icon-download {display:block;width:1rem;height:1rem;position: absolute;bottom:.2rem;right:0.2rem;}
 .tpl-page-item .download-progress-bar { position: absolute; left: 0.1rem; bottom: .2rem;width:2.41rem;}
-.tpl-page-item.active {border:0.1rem solid #52b502;}
+.tpl-page-item.active {border:2px solid #52b502;}
 
 .pages {width:100%;margin:0.444rem 0;position:relative;overflow: hidden;}
 .pages li {width:9.71rem;height:15.24rem;float:left;position: relative;margin-left:1.06rem;opacity: 0.5;-webkit-transform:translate3d(0,0,0);}
@@ -288,7 +288,7 @@ a {text-decoration: none;color:inherit;}
 .pages-item .pages-item-thumb {width:100%;}
 .pages .stage-content {border-radius: 0.2rem;}
 .pages-big {margin-top:3.37rem;}
-.pages-big li {width:11.34rem;height:18.11rem;margin-left:1.33rem;}
+.pages-big li {width:14rem;height:22.35rem;margin-left:2rem;}
 
 .story-page-list {width:100%;overflow: hidden}
 .story-page-list .icon-correct {
@@ -436,9 +436,9 @@ a {text-decoration: none;color:inherit;}
     -o-transform:scale(0.61);
 }
 .pages-big .stage-content .stage-content-box {
-    -moz-transform:scale(0.7);
-    -webkit-transform:scale(0.7);
-    -o-transform:scale(0.7);
+    -moz-transform:scale(0.875);
+    -webkit-transform:scale(0.875);
+    -o-transform:scale(0.875);
 }
 .story-page-list .stage-content-box {
     -moz-transform:scale(0.3);
