--- a/app/src/main/assets/www/views/mobile2.html
+++ b/app/src/main/assets/www/views/mobile2.html
@@ -29,16 +29,17 @@
     <!--上下滚动 start-->
     <section class="m-page hide" >
         <div class="m-img" >
+            <!--jobs-->
             <div class="stage-content edit-area pages-img pages-img-bg"
                  style=" text-align:center;word-break:break-all;background: url(img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
                 <div class="stage-content-box" style="text-align: center;width:16rem;-webkit-transform-origin:0 0;">
                     <div class="symbol"  style="padding-top:2.96rem;">
-                        <div class="pages-txt edit-area" style="display: inline-block;font-family: 'bebas';font-size:4.41rem;line-height: 4.41rem;color:#cc0001;">
+                        <div class="pages-txt edit-area" data-animation="animated slideInDown" style="display: inline-block;font-family: 'bebas';font-size:4.41rem;line-height: 4.41rem;color:#cc0001;">
                             JOBS
                         </div>
                     </div>
                     <div class="symbol" style="z-index: 3;">
-                        <div class="pages-txt edit-area" style="display: inline-block;margin-top:0.8rem;font-family: 'Lato';font-size:0.8rem;line-height:0.8rem;color:#444;">
+                        <div class="pages-txt edit-area"  data-animation="animated slideInLeft" style="display: inline-block;margin-top:0.8rem;font-family: 'Lato';font-size:0.8rem;line-height:0.8rem;color:#444;">
                             FOR WISAPE
                         </div>
                     </div>
@@ -46,24 +47,24 @@
                         <div style="margin:0 2rem;overflow: hidden">
                             <div style="display: inline-block;width: 50%;float:left;">
                                 <div class="symbol" >
-                                    <div class="pages-txt edit-area" style="font-weight:bold;text-align:left;font-family: 'Lato';font-size:0.71rem;line-height: 0.71rem;color:#444;">
+                                    <div class="pages-txt edit-area"  data-animation="animated flash" style="font-weight:bold;text-align:left;font-family: 'Lato';font-size:0.71rem;line-height: 0.71rem;color:#444;">
                                         Global Partner
                                     </div>
                                 </div>
                                 <div class="symbol" >
-                                    <div class="pages-txt edit-area" style="font-weight:bold;text-align:left;font-family: 'Lato';font-size:0.62rem;line-height: 0.62rem;color:#444;">
+                                    <div class="pages-txt edit-area" data-animation="animated flash"  style="font-weight:bold;text-align:left;font-family: 'Lato';font-size:0.62rem;line-height: 0.62rem;color:#444;">
                                         Indonesia
                                     </div>
                                 </div>
                             </div>
                             <div style="display: inline-block;width: 50%;float:left;">
                                 <div class="symbol" >
-                                    <div class="pages-txt edit-area" style="font-weight:bold;text-align:left;font-family: 'Lato';font-size:0.71rem;line-height: 0.71rem;color:#444;">
+                                    <div class="pages-txt edit-area"  data-animation="animated flash" style="font-weight:bold;text-align:left;font-family: 'Lato';font-size:0.71rem;line-height: 0.71rem;color:#444;">
                                         Global Partner
                                     </div>
                                 </div>
                                 <div class="symbol" >
-                                    <div class="pages-txt edit-area" style="font-weight:bold;text-align:left;font-family: 'Lato';font-size:0.62rem;line-height: 0.62rem;color:#444;">
+                                    <div class="pages-txt edit-area" data-animation="animated flash"  style="font-weight:bold;text-align:left;font-family: 'Lato';font-size:0.62rem;line-height: 0.62rem;color:#444;">
                                         Indonesia
                                     </div>
                                 </div>
@@ -72,24 +73,24 @@
                         <div style="margin:1rem 2rem;overflow: hidden">
                             <div style="display: inline-block;width: 50%;float:left;">
                                 <div class="symbol" >
-                                    <div class="pages-txt edit-area" style="text-align:left;font-family: 'Lato';font-size:0.71rem;line-height: 0.71rem;color:#444;">
+                                    <div class="pages-txt edit-area" data-animation="animated flash"  style="text-align:left;font-family: 'Lato';font-size:0.71rem;line-height: 0.71rem;color:#444;">
                                         Global Partner
                                     </div>
                                 </div>
                                 <div class="symbol" >
-                                    <div class="pages-txt edit-area" style="text-align:left;font-family: 'Lato';font-size:0.62rem;line-height: 0.62rem;color:#444;">
+                                    <div class="pages-txt edit-area" data-animation="animated flash"  style="text-align:left;font-family: 'Lato';font-size:0.62rem;line-height: 0.62rem;color:#444;">
                                         Indonesia
                                     </div>
                                 </div>
                             </div>
                             <div style="display: inline-block;width: 50%;float:left;">
                                 <div class="symbol" >
-                                    <div class="pages-txt edit-area" style="text-align:left;font-family: 'Lato';font-size:0.71rem;line-height: 0.71rem;color:#444;">
+                                    <div class="pages-txt edit-area"  data-animation="animated flash" style="text-align:left;font-family: 'Lato';font-size:0.71rem;line-height: 0.71rem;color:#444;">
                                         Global Partner
                                     </div>
                                 </div>
                                 <div class="symbol" >
-                                    <div class="pages-txt edit-area" style="text-align:left;font-family: 'Lato';font-size:0.62rem;line-height: 0.62rem;color:#444;">
+                                    <div class="pages-txt edit-area" data-animation="animated flash"  style="text-align:left;font-family: 'Lato';font-size:0.62rem;line-height: 0.62rem;color:#444;">
                                         Indonesia
                                     </div>
                                 </div>
@@ -98,32 +99,53 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
     <section class="m-page hide" >
         <div class="m-img" >
+            <!--who-->
+            <div class="stage-content edit-area pages-img pages-img-bg" style=" text-align:center;word-break:break-all;background: url(img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
+                <div class="stage-content-box" style="-webkit-transform-origin:0 0;position: absolute;top:50%;margin-top:-4rem;">
+                    <div style="width:12.14rem;margin:0 1.929rem;">
+                        <div class="symbol" style="z-index: 3;">
+                            <div class="pages-txt edit-area active" data-animation="animated fadeInDown" style="min-height:1.64rem;min-width:12.4rem;font-size:1.64rem;line-height:1.64rem;color:#000;font-weight: bold;font-family: 'bebas';">
+                                what  is wisape
+                            </div>
+                        </div>
+                        <div class="symbol" style="z-index: 3;">
+                            <div class="pages-txt edit-area" data-animation="animated wobble" style="min-height:1.64rem;min-width:8rem;font-size:0.444rem;color:#000;font-family: 'Lato';margin-top:1.1rem;line-height: 0.8rem;">
+                                Wisape is an all-in-one mobile marketing platform. It now enables you to build stunning business stories with various of category templates（eg：Display goods, Create poster, broadcast brand, interaction, etc）. Variety of social network channels are supported, so you can promote your business through them. monitor the overall sales trends and manage the whole marketing process. Wisape can help you get more target customer and improve ROI(Return on investment), take your business to the next level. by the way, of course no technical skills required and FREE！
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="m-page hide" >
+        <div class="m-img" >
+            <!--cover-->
             <div class="stage-content edit-area pages-img pages-img-bg"
                  style=" text-align:center;word-break:break-all;background: url(img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
                 <div class="stage-content-box" style="position: absolute;text-align: center;top:3.65rem;width:16rem;-webkit-transform-origin:0 0;">
-                    <div class="symbol" >
-                        <div class="pages-txt edit-area" style="display: inline-block;font-family: 'bebas';font-size:3.5rem;line-height: 3.5rem;color:#cc0001;">
+                    <div class="symbol">
+                        <div class="pages-txt edit-area" data-animation="animated flash"  style="display: inline-block;font-family: 'bebas';font-size:3.5rem;line-height: 3.5rem;min-height: 3.5rem;min-width:14rem;color:#cc0001;">
                             JOITN
                         </div>
                     </div>
                     <div class="symbol" style="z-index: 3;">
-                        <div class="pages-txt edit-area" style="display: inline-block;margin-top:0.5rem;font-family: 'bebas';font-size:3.5rem;line-height: 3.5rem;color:#000;">
+                        <div class="pages-txt edit-area" data-animation="animated flash" style="display: inline-block;margin-top:0.5rem;font-family: 'bebas';font-size:3.5rem;line-height: 3.5rem;min-height: 3.5rem;min-width:14rem;color:#000;">
                             WISAPE
                         </div>
                     </div>
                 </div>
-                <div class="stage-content-box" style="position: absolute;bottom:0.5rem;text-align: center;width:16rem;-webkit-transform-origin:0 0;">
+                <div class="stage-content-box" style="position: absolute;bottom:1rem;text-align: center;width:16rem;-webkit-transform-origin:0 100%;">
                     <div class="symbol" style="z-index: 999; ">
-                        <div class="pages-img edit-area">
-                            <img data-name="img1" style="width:4.44rem;height:1.03rem;" src="img/logo.png"></div>
+                        <div class="pages-img edit-area"  data-animation="animated fadeInUp">
+                            <img style="width:4.44rem;height:1.03rem;" src="img/logo.png"></div>
                     </div>
                     <div class="symbol" style="z-index: 3;">
-                        <div class="pages-txt edit-area" style="font-size:0.53rem;color:#000;font-family: 'Lato';margin-top:0.3rem;">
+                        <div class="pages-txt edit-area" data-animation="animated fadeInUp" style="font-size:0.53rem;color:#000;font-family: 'Lato';margin-top:0.3rem;min-height: 0.53rem;min-width:14rem;">
                             Something Wonderful is Coming
                         </div>
                     </div>
@@ -133,41 +155,29 @@
     </section>
     <section class="m-page hide" >
         <div class="m-img" >
-            <div class="stage-content edit-area pages-img pages-img-bg" style=" text-align:center;word-break:break-all;display: box;display: -webkit-box;display: -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background: url(img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
-                <div class="stage-content-box" style="-webkit-transform-origin:0 0;">
-                    <div style="width:12.14rem;margin:3.5rem 1.929rem;">
-                        <div class="symbol" style="z-index: 3;">
-                            <div class="pages-txt edit-area" style="font-size:1.64rem;line-height:1.64rem;color:#000;font-weight: bold;font-family: 'bebas';">
-                                what  is wisape
-                            </div>
+            <!--contact-->
+            <div class="stage-content edit-area edit-area-active pages-img pages-img-bg"
+                 style=" text-align:center;word-break:break-all;background: url(img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
+                <div class="stage-content-box" style="text-align: center;width:16rem;-webkit-transform-origin:0 0;">
+                    <div class="symbol"  style="padding-top:6.4rem;">
+                        <div class="pages-txt edit-area" data-animation="animated bounce" style="min-width:14rem;min-height:2rem;display: inline-block;font-family: 'bebas';font-size:1.92rem;line-height: 1.92rem;color:#cc0001;">
+                            CONTACT US
                         </div>
-                        <div class="symbol" style="z-index: 3;">
-                            <div class="pages-txt edit-area" style="font-size:0.444rem;color:#000;font-family: 'Lato';margin-top:1.1rem;line-height: 0.8rem;">
-                                Wisape is an all-in-one mobile marketing platform. It now enables you to build stunning business stories with various of category templates（eg：Display goods, Create poster, broadcast brand, interaction, etc）. Variety of social network channels are supported, so you can promote your business through them. monitor the overall sales trends and manage the whole marketing process. Wisape can help you get more target customer and improve ROI(Return on investment), take your business to the next level. by the way, of course no technical skills required and FREE！
-                            </div>
+                    </div>
+                    <div class="symbol" style="margin-top:1.62rem;">
+                        <div class="pages-txt edit-area" data-animation="animated rotateIn" style="min-width:14rem;min-height:9rem;padding:0.4rem 0;text-align:center;font-family: 'Lato';font-size:0.71rem;line-height: 1.41rem;color:#000;">
+                            Site:www.wisape.com<br/>
+                            Tel: (702) 825-1558<br/>
+                            Email:support@wisape.com<br/>
+                            Facebook Page: Wisape<br/>
+                            Twitter: @WisapeAgency<br/>
+                            Line: WisapeJackey
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
-    <section class="m-page hide" >
-        <div class="m-img" >
-            <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;" data-animation="animated slideInDown">>As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
-        </div>
-    </section>
-    <section class="m-page hide" >
-        <div class="m-img" >
-            <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;" data-animation="animated slideInDown">>As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
-        </div>
-    </section>
-    <section class="m-page hide" >
-        <div class="m-img" >
-            <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;" data-animation="animated slideInDown">>As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
-        </div>
-    </section>
-
     <section class='u-arrow'><img src="../public/img/btn01_arrow.png" /></section>
     <!--上下滚动代码 end-->
 </div>
