--- a/app/src/main/assets/www/views/test2.html
+++ b/app/src/main/assets/www/views/test2.html
@@ -138,7 +138,7 @@
         </div>
 
     </div>
-    <div class="pages" id="pages-scroll" style="" >
+    <div class="pages pages-big" id="pages-scroll" style="" >
         <ul>
             <!--cover-->
             <li class="active">
