--- a/app/src/main/assets/www/views/test2.html
+++ b/app/src/main/assets/www/views/test2.html
@@ -683,7 +683,7 @@
     </div>
     <div class="clearfix"></div>
 </div>
-<div class="ui-dialog del-dialog" style="width: 300px; height: 220px; display: none; left: 50%; margin-left: -150px; top: 50%; margin-top: -110px;">
+<div class="ui-dialog del-dialog" >
     <div class="ui-dialog-title">Delete Page</div>
     <div class="ui-dialog-content">
         Pages will be deleted from the device and cannot be recovered.
@@ -694,7 +694,7 @@
     </div>
     <div class="clearfix"></div>
 </div>
-<div class="ui-dialog del-tip-dialog" style="width: 300px; height: 220px; display: none; left: 50%; margin-left: -150px; top: 50%; margin-top: -110px;">
+<div class="ui-dialog del-tip-dialog" >
     <div class="ui-dialog-title">Delete Page</div>
     <div class="ui-dialog-content">
         You have to keep one page.
@@ -704,8 +704,7 @@
     </div>
     <div class="clearfix"></div>
 </div>
-<div class="ui-dialog tip-dialog" style="width: 300px; height: 200px; display: none; left: 50%; margin-left: -150px; top: 50%; margin-top: -100px;">
-    <div class="ui-dialog-title"></div>
+<div class="ui-dialog tip-dialog" style="">
     <div class="ui-dialog-content">
         This story should not exceed 15 pages.
     </div>
