文字修改  字体下载状态

--- a/app/src/main/assets/www/views/test.html
+++ b/app/src/main/assets/www/views/test.html
@@ -235,7 +235,7 @@
     <div class="clearfix"></div>
 </div>
 <div class="ui-dialog save-dialog" >
-    <div class="ui-dialog-title">Save Stroy</div>
+    <div class="ui-dialog-title">Save Story</div>
     <div class="ui-dialog-content">
         Comfirm to save stroy ？
     </div>
