文字编辑调整

--- a/app/src/main/assets/www/views/test.html
+++ b/app/src/main/assets/www/views/test.html
@@ -237,7 +237,7 @@
 <div class="ui-dialog save-dialog" >
     <div class="ui-dialog-title">Save Story</div>
     <div class="ui-dialog-content">
-        Comfirm to save stroy ？
+        Comfirm to save story ？
     </div>
     <div class="ui-dialog-btns">
         <a class="ui-btn btn-cancle">Cancel</a>
